RESOLVED FIXED183178
CSS ::selection stroke-color and stroke-width are not applied to selected text in text fields and ::selection:window-inactive stroke-color and stroke-width are never applied
https://bugs.webkit.org/show_bug.cgi?id=183178
Summary CSS ::selection stroke-color and stroke-width are not applied to selected tex...
Daniel Bates
Reported 2018-02-27 14:13:51 PST
CSS ::selection stroke-color and stroke-width are not applied to selected text in text fields and ::selection:window-inactive stroke-color and stroke-width are never applied.
Attachments
Patch and layout tests (16.07 KB, patch)
2018-02-27 14:23 PST, Daniel Bates
no flags
Patch and layout tests (20.19 KB, patch)
2018-02-27 14:33 PST, Daniel Bates
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (5.69 MB, application/zip)
2018-02-27 15:52 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews205 for win-future (12.85 MB, application/zip)
2018-02-27 16:38 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews206 for win-future (12.89 MB, application/zip)
2018-02-27 18:41 PST, EWS Watchlist
no flags
Patch and layout tests (23.75 KB, patch)
2018-02-28 11:50 PST, Daniel Bates
hyatt: review+
Daniel Bates
Comment 1 2018-02-27 14:23:05 PST
Created attachment 334705 [details] Patch and layout tests
Daniel Bates
Comment 2 2018-02-27 14:33:32 PST
Created attachment 334706 [details] Patch and layout tests
EWS Watchlist
Comment 3 2018-02-27 15:52:36 PST Comment hidden (obsolete)
EWS Watchlist
Comment 4 2018-02-27 15:52:38 PST Comment hidden (obsolete)
EWS Watchlist
Comment 5 2018-02-27 16:38:12 PST Comment hidden (obsolete)
EWS Watchlist
Comment 6 2018-02-27 16:38:24 PST Comment hidden (obsolete)
EWS Watchlist
Comment 7 2018-02-27 18:41:11 PST Comment hidden (obsolete)
EWS Watchlist
Comment 8 2018-02-27 18:41:22 PST Comment hidden (obsolete)
Daniel Bates
Comment 9 2018-02-28 11:50:35 PST
Created attachment 334756 [details] Patch and layout tests
Dave Hyatt
Comment 10 2018-03-01 10:16:51 PST
Comment on attachment 334756 [details] Patch and layout tests r=me
Daniel Bates
Comment 11 2018-03-01 14:35:51 PST
Radar WebKit Bug Importer
Comment 12 2018-03-01 14:38:24 PST
Note You need to log in before you can comment on or make changes to this bug.